--- a/cerebra_atlas_python/config.ini
+++ b/cerebra_atlas_python/config.ini
@@ -11,6 +11,8 @@ cerebra_output_path=%(generated_path)scerebra/
 [MNIAverage]
 bem_conductivity=(0.33, 0.0042, 0.33)
 bem_ico=4
-mniaverage_output_path=%(generated_path)smodels/
-; $SUBJECTS_DIR should be set as ENV variable
-fs_subjects_dir=%(SUBJECTS_DIR)s
+mniaverage_output_path=%(generated_path)smni_average/
+; Use $SUBJECTS_DIR ENV variable
+fs_subjects_dir=%(SUBJECTS_DIR)s 
+; Use custom download dir
+# fs_subjects_dir=%(generated_path)smni_average/download
