merge_points func optimized

--- a/cerebra_atlas_python/config.ini
+++ b/cerebra_atlas_python/config.ini
@@ -13,6 +13,6 @@ bem_conductivity=(0.33, 0.0042, 0.33)
 bem_ico=4
 mniaverage_output_path=%(generated_path)smni_average/
 ; Use $SUBJECTS_DIR ENV variable
-fs_subjects_dir=%(SUBJECTS_DIR)s 
+# fs_subjects_dir=%(SUBJECTS_DIR)s 
 ; Use custom download dir
 # fs_subjects_dir=%(generated_path)smni_average/download
