Discrete source space

--- a/cerebra_atlas_python/config.ini
+++ b/cerebra_atlas_python/config.ini
@@ -7,6 +7,9 @@ generated_path=/home/carlos/Carlos/source-localization/generated/
 ; Class arguments
 [CerebrA]
 cerebra_output_path=%(generated_path)scerebra/
+source_space_include_non_cortical=True
+source_space_include_wm=False
+source_space_grid_size=3
 
 [MNIAverage]
 bem_conductivity=(0.33, 0.0042, 0.33)
