working macOS w/out latex

--- a/cerebra_atlas_python/config.ini
+++ b/cerebra_atlas_python/config.ini
@@ -2,7 +2,7 @@
 
 ; Default global variables
 [DEFAULT]
-generated_path=/home/carlos/Carlos/source-localization/generated/
+generated_path=%(HOME)s/Carlos/source-localization/generated/
 
 ; Class arguments
 [CerebrA]
