--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-mne==1.6.0
-matplotlib==3.8.1
-matplotlib-inline==0.1.6
-numpy==1.26.1
-nibabel==5.1.0
-configparser==6.0.0
+mne>=1.6.0
+matplotlib>=3.8.1
+matplotlib-inline>=0.1.6
+numpy>=1.26.1
+nibabel>=5.1.0
+configparser>=6.0.0
+pandas>=2.2.1
