--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 mne>=1.6.0
 matplotlib>=3.7
 matplotlib-inline>=0.1
-numpy>=1.24
+numpy>=1.24, <2
 nibabel>=5
 configparser>=6
 pandas>=2
 bottleneck>=1.3.6
 appdirs>=1.4
 # Open3d
+open3d>=0.18.0
